# VEQRA-FORM

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  README.md  install-config.yml  pyproject.toml  pytest.ini  requirements.in
.devcontainer/: devcontainer.json
.github/workflows/: build-allep.yml  build-windows-bridge.yml  test.yml
PythonPartsScripts/: VeqraFormConnect.py  VeqraFormCuboid.py  constants.py  veqra_bridge_client.py  veqra_model_reader.py  veqra_protocol.py
bridge/: requirements.txt  run_bridge.py  run_dev.sh  run_windows.bat
bridge/veqra_bridge/: __init__.py  config.py  database.py  logging_setup.py  main.py  security.py
bridge/veqra_bridge/ai/: __init__.py  anthropic_provider.py  base_provider.py  demo_provider.py  prompts.py  tools.py
bridge/veqra_bridge/api/: __init__.py  auth.py  commands.py  connectors.py  health.py  projects.py  state.py  sync.py
bridge/veqra_bridge/models/: __init__.py  command.py  connector.py  element.py  project.py
bridge/veqra_bridge/services/: __init__.py  ai_service.py  command_service.py  project_service.py  sync_service.py
docs/: MANUAL_ALLPLAN_TEST.md
shared/: VERSION.json
shared/schemas/: command.schema.json  element.schema.json  project.schema.json  protocol.schema.json  result.schema.json
tests/: conftest.py  test_allep_archive.py  test_install_config.py  test_no_placeholders.py  test_no_secrets.py  test_package_structure.py  test_pyp_structure.py
tests/allplan/: conftest.py  test_ai_in_palette.py  test_bridge_client.py  test_connector_flow.py
tests/bridge/: conftest.py  test_ai_providers.py  test_commands.py  test_database.py  test_health_and_auth.py  test_sync.py  test_websocket.py
tests/integration/: test_full_command_flow.py  test_web_build.py
tests/protocol/: test_auto_pairing.py  test_command_validation.py  test_protocol_version.py
tools/: build_allep.py  build_bridge_source.py  generate_icons.py  validate_allep.py
web/: index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.tsx  styles.css
web/src/components/: Banner.tsx  Card.tsx  StatusBadge.tsx  StatusDot.tsx
web/src/types/: api.ts
(+12 files in other folders)
