[project]
name = "veqra-form"
version = "0.1.0"
description = "VEQRA FORM - Allplan Plugin ab 2025 (Grundsystem: Quader per Palette und Einfügepunkt)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "veqra" }]

# Das Plugin selbst hat keine Laufzeitabhaengigkeiten (siehe requirements.in)
dependencies = []

# Dieses Repository ist kein installierbares Python-Paket; pyproject.toml
# dient nur der Werkzeug-Konfiguration und den Dev-Abhaengigkeiten.
[tool.setuptools]
packages = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
    "pyyaml>=6.0",
    "pillow>=10.0",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "httpx>=0.27",
]

[tool.ruff]
line-length = 110
target-version = "py311"
extend-exclude = ["_external", "_legacy", ".venv"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = [
    "E402",  # Skript-Pfad-Setup vor Importen in Tests/Tools
]

[tool.ruff.lint.per-file-ignores]
# Die Plugin-Skripte laufen in der Allplan-Python-Laufzeit:
# timezone.utc statt datetime.UTC fuer maximale Kompatibilitaet
"PythonPartsScripts/*" = ["UP017"]

[tool.ruff.lint.isort]
known-first-party = ["constants"]
